== 0.5.5 Pony release
 * Improve specs stability.
 * Move request body to a Tempfile if too big (> 112 MB)
 * Remove useless check for max header size in Request (already done in the parser)

== 0.5.4 Flying Mustard release
 * Don't read the full body, use direct streaming when sending response.
   See: Response#each
   As a result, the Content-Length can not be calculated anymore.
   You have to do set this in your adapter. All frameworks do it anyway.
   It improve memory usage and boost speed for low concurrency.
   Thanks to Kent Sibilev and Ezra for their help on that one.
 * Add 'Server' response header
 * Fix --user and --group option not changing daemon process privileges
 
== 0.5.3 Purple Yogurt release
 * win32 pre-compiled gem now available
 * change rake task configuration to allow win32 gem build
 * Add prefix option to thin script to mount app under a given path.

== 0.5.2 Cheezburger release
 * Add cluster support through the -s option in the thin script, start 3 thins like this:
    thin start -s3 -p3000
   3 thin servers will be started on port 3000, 3001, 3002, also the port number will be
   injected in the pid and log filenames.
 * Fix IOError when writing to logger when starting server as a daemon.
 * Really change directory when the -c option is specified.
 * Add restart command to thin script.
 * Fix typos in thin script usage message and expand chdir path.
 * Rename thin script options to be the same as mongrel_rails script [thronedrk]:
     -o --host  => -a --address
     --log-file => --log
     --pid-file => --pid
     --env      => --environment
 
== 0.5.1 LOLCAT release
 * Add URL rewriting to Rails adapter so that page caching works and / fetches index.html if present.
 * Fix bug in multiline response header parsing.
 * Add specs for the Rails adapter.
 * Fix Set-Cookie headers in Rails adapter to handle multiple values correctly.
 * Fix Ruby 1.9 incompatibility in Response#headers= and Rakefile.