@@ -1,37 +1,24 @@
 module Thin
-  # Acts like a Hash, but allows duplicated keys
+  # Store HTTP header name-value pairs direcly to a string
+  # and allow duplicated entries on some names.
   class Headers
     HEADER_FORMAT      = "%s: %s\r\n".freeze
     ALLOWED_DUPLICATES = %w(Set-Cookie Set-Cookie2 Warning WWW-Authenticate).freeze
     
     def initialize
       @sent = {}
-      @items = []
+      @out = ''
     end
     
     def []=(key, value)
-      if @sent.has_key?(key) && !ALLOWED_DUPLICATES.include?(key)
-        # If we don't allow duplicate for that field
-        # we overwrite the one that is already there
-        @items.assoc(key)[1] = value
-      else
+      if !@sent[key] || ALLOWED_DUPLICATES.include?(key)
         @sent[key] = true
-        @items << [key, value]
+        @out << HEADER_FORMAT % [key, value]
       end
-    end
-    
-    def [](key)
-      if item = @items.assoc(key)
-        item[1]
-      end
-    end
-    
-    def size
-      @items.size
     end
     
     def to_s
-      @items.inject('') { |out, (name, value)| out << HEADER_FORMAT % [name, value] }
+      @out
     end
   end
 end
