@@ -1,4 +1,5 @@
 == 0.5.5 Pony release
+ * Alter response headers to output directly to a string.
  * Improve specs stability.
  * Move request body to a Tempfile if too big (> 112 MB)
  * Remove useless check for max header size in Request (already done in the parser)
